alt 누락된 부분 수정

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="The Red Czar Camellia, the key ingredient in N°1 DE CHANEL, is the result of 17 years of research. At the heart of N°1 DE CHANEL is the Red Camellia, a flower with revitalizing powers.">
   <title>THE BEAUTIFUL by CHANEL</title>
   <link rel="icon" href="./assets/images/favicon.png" type="image/x-icon" sizes="16x16">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/7.4.1/swiper-bundle.css">
@@ -14,7 +15,7 @@
 </head>
 
 <body>
-  <!-- <div class="loading">
+  <div class="loading">
     <div class="text-area">
       <p>Modernism's Splendor</p>
     </div>
@@ -23,14 +24,14 @@
         d="M0,192L34.3,165.3C68.6,139,137,85,206,96C274.3,107,343,181,411,197.3C480,213,549,171,617,154.7C685.7,139,754,149,823,176C891.4,203,960,245,1029,256C1097.1,267,1166,245,1234,208C1302.9,171,1371,117,1406,90.7L1440,64L1440,320L1405.7,320C1371.4,320,1303,320,1234,320C1165.7,320,1097,320,1029,320C960,320,891,320,823,320C754.3,320,686,320,617,320C548.6,320,480,320,411,320C342.9,320,274,320,206,320C137.1,320,69,320,34,320L0,320Z">
       </path>
     </svg>
-  </div> -->
+  </div>
   <div class="wrapper">
     <div class="skip">
       <a href="#header">Skip to menu</a>
       <a href="#main">Skip to content</a>
     </div>
     <header class="header" id="header">
-      <button class="menu_button" aria-expanded="false" aria-haspopup="menu" aria-pressed="false" type="button">
+      <button class="menu_button" aria-expanded="false" aria-haspopup="menu" aria-pressed="false" type="button" aria-label="menu button">
         <span class="menu_text">
           <span class="menu_text_top">menu</span>
           <span class="menu_text_bottom" aria-hidden="true">menu</span>
@@ -185,21 +186,21 @@
                 sizes="100vw">
               <img
                 src="./assets/images/img_concept.jpg"
-                alt="">
+                alt="Chanel's Camellia product">
             </picture>
           </div>
           <div class="desc_effect" aria-hidden="true">
-            <img src="./assets/images/img_concept_animation.png" alt="">
+            <img src="./assets/images/img_concept_animation.png" alt="the red camellia by chanel">
           </div>
         </div>
       </section>
       <div class="banner_area" aria-hidden="true">
         <div class="marquee">
           <div class="img_box">
-            <img src="./assets/images/img_banner.png" alt="">
+            <img src="./assets/images/img_banner.png" alt="THE BEAUTIFUL">
           </div>
           <div class="img_box">
-            <img src="./assets/images/img_banner.png" alt="">
+            <img src="./assets/images/img_banner.png" alt="THE BEAUTIFUL">
           </div>
         </div>
       </div>
@@ -233,7 +234,7 @@
               sizes="100vw">
             <img
               src="./assets/images/img_about.jpeg"
-              alt="">
+              alt="Camellia flower">
           </picture>
         </div>
         <div class="text_box" data-scroll="" id="about_description">
@@ -259,10 +260,10 @@
               </p>
               <div class="about_arrow">
                 <span class="prev">
-                  <img src="./assets/images/ico_arrow.svg" alt="View more arrow icon">
+                  <img src="./assets/images/ico_arrow.svg" alt="view more prev arrow icon">
                 </span>
                 <span class="next" aria-hidden="false">
-                  <img src="./assets/images/ico_arrow.svg" alt="">
+                  <img src="./assets/images/ico_arrow.svg" alt="view more next arrow icon">
                 </span>
               </div>
             </a>
@@ -276,44 +277,43 @@
         <div class="inner">
           <div class="text_box">
             <strong class="title" id="ethical_description">
-              THE RESEARCH<br>
-              INGREDIENT
+              THE RESEARCH<br> INGREDIENT
             </strong>
-              <div class="description_wrap">
-                <p class="description">
-                  The ability to harness the power of <br>the Red Czar Camellia, <br> the ingredient at the heart of
-                  the
-                  N°1
-                  DE
-                  CHANEL line, <br>is the
-                  result of 17 years of research.<br>
-                  At the heart of N°1 DE CHANEL is the Red Camellia, <br>a flower with revitalizing powers
+            <div class="description_wrap">
+              <p class="description">
+                The ability to harness the power of <br>the Red Czar Camellia, <br> the ingredient at the heart of
+                the
+                N°1
+                DE
+                CHANEL line, <br>is the
+                result of 17 years of research.<br>
+                At the heart of N°1 DE CHANEL is the Red Camellia, <br>a flower with revitalizing powers
+              </p>
+              <a href="" class="link_more">
+                <p class="link_text">
+                  <span class="text_top">VIEW RESEARCH</span>
+                  <span class="text_bottom" aria-hidden="true">VIEW RESEARCH</span>
                 </p>
-                <a href="" class="link_more">
-                  <p class="link_text">
-                    <span class="text_top">VIEW RESEARCH</span>
-                    <span class="text_bottom" aria-hidden="true">VIEW RESEARCH</span>
-                  </p>
-                  <div class="about_arrow">
-                    <span class="prev">
-                      <img src="./assets/images/ico_arrow.svg" alt="View more arrow icon">
-                    </span>
-                    <span class="next" aria-hidden="true">
-                      <img src="./assets/images/ico_arrow.svg" alt="">
-                    </span>
-                  </div>
-                </a>
-              </div>
+                <div class="about_arrow">
+                  <span class="prev">
+                    <img src="./assets/images/ico_arrow.svg" alt="view more prev arrow icon">
+                  </span>
+                  <span class="next" aria-hidden="true">
+                    <img src="./assets/images/ico_arrow.svg" alt="view more next arrow icon">
+                  </span>
+                </div>
+              </a>
+            </div>
           </div>
           <div class="image_box" data-scroll="" aria-hidden="true">
             <picture>
               <source media="(min-width: 961px)" srcset="./assets/images/img_research.jpg">
               <source media="(max-width: 960px)" srcset="./assets/images/img_research_mobile.webp">
-              <img src="./assets/images/img_research.jpg" alt="">
+              <img src="./assets/images/img_research.jpg" alt="An image of Camellia petals inside a beaker">
             </picture>
           </div>
           <div class="slogan" aria-hidden="true">
-            <img src="./assets/images/img_slogan.png" alt="">
+            <img src="./assets/images/img_slogan.png" alt="chanel slogan the red camellia">
           </div>
         </div>
       </section>
@@ -332,7 +332,7 @@
                 <div class="text_box">
                   <strong class="product_name">
                     <span class="blind">product name</span>
-                    <span >N°1 DE CHANEL</span>
+                    <span>N°1 DE CHANEL</span>
                     <span>REVITALIZING SERUM</span>
                   </strong>
                   <div class="product_info">
@@ -352,16 +352,16 @@
                     </span>
                     <div class="about_arrow">
                       <span class="prev">
-                        <img src="./assets/images/ico_arrow.svg" alt="View more arrow icon">
+                        <img src="./assets/images/ico_arrow.svg" alt="view more prev arrow icon">
                       </span>
                       <span class="next" aria-hidden="true">
-                        <img src="./assets/images/ico_arrow.svg" alt="">
+                        <img src="./assets/images/ico_arrow.svg" alt="view more next arrow icon">
                       </span>
                     </div>
                   </a>
                 </div>
                 <div class="visual_title" aria-hidden="true">
-                  <img src="./assets/images/img_product1_title.png" alt="">
+                  <img src="./assets/images/img_product1_title.png" alt="N°1 DE CHANEL REVITALIZING SERUM">
                 </div>
               </div>
             </div>
@@ -394,16 +394,16 @@
                     </p>
                     <div class="about_arrow">
                       <span class="prev">
-                        <img src="./assets/images/ico_arrow.svg" alt="View more arrow icon">
+                        <img src="./assets/images/ico_arrow.svg" alt="view more prev arrow icon">
                       </span>
                       <span class="next">
-                        <img src="./assets/images/ico_arrow.svg" alt="">
+                        <img src="./assets/images/ico_arrow.svg" alt="view more next arrow icon">
                       </span>
                     </div>
                   </a>
                 </div>
                 <div class="visual_title" aria-hidden="true">
-                  <img src="./assets/images/img_product2_title.png" alt="">
+                  <img src="./assets/images/img_product2_title.png" alt="N°1 DE CHANEL REVITALIZING EYE CREAM">
                 </div>
               </div>
             </div>
@@ -436,16 +436,16 @@
                     </p>
                     <div class="about_arrow">
                       <span class="prev">
-                        <img src="./assets/images/ico_arrow.svg" alt="View more arrow icon">
+                        <img src="./assets/images/ico_arrow.svg" alt="view more prev arrow icon">
                       </span>
                       <span class="next" aria-hidden="true">
-                        <img src="./assets/images/ico_arrow.svg" alt="">
+                        <img src="./assets/images/ico_arrow.svg" alt="view more next arrow icon">
                       </span>
                     </div>
                   </a>
                 </div>
                 <div class="visual_title" aria-hidden="true">
-                  <img src="./assets/images/img_product3_title.png" alt="">
+                  <img src="./assets/images/img_product3_title.png" alt="N°1 DE CHANEL REVITALIZING FOUNDATION">
                 </div>
               </div>
             </div>
@@ -460,10 +460,10 @@
               </p>
               <div class="about_arrow">
                 <span class="prev">
-                  <img src="./assets/images/ico_arrow.svg" alt="View all arrow icon">
+                  <img src="./assets/images/ico_arrow.svg" alt="view all prev arrow icon">
                 </span>
                 <span class="next" aria-hidden="true">
-                  <img src="./assets/images/ico_arrow.svg" alt="">
+                  <img src="./assets/images/ico_arrow.svg" alt="view all next arrow icon">
                 </span>
               </div>
             </a>
