--- a/index.html
+++ b/index.html
@@ -5,13 +5,11 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="The Red Czar Camellia, the key ingredient in N°1 DE CHANEL, is the result of 17 years of research. At the heart of N°1 DE CHANEL is the Red Camellia, a flower with revitalizing powers.">
-  <title>THE BEAUTIFUL by CHANEL</title>
+  <meta name="description" content="Discover N°1 DE CHANEL with the revitalizing power of Red Camellia. Explore skincare products backed by 17 years of research for radiant, youthful skin.">
+  <title>N°1 DE CHANEL - Red Camellia Products and Skincare</title>
   <link rel="icon" href="./assets/images/favicon.png" type="image/x-icon" sizes="16x16">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/7.4.1/swiper-bundle.css">
   <link rel="stylesheet" href="./assets/css/style.css">
-
-
 </head>
 
 <body>
@@ -148,11 +146,11 @@
           <picture>
             <source media="(min-width: 961px)" srcset="./assets/images/img_visual_desktop.webp 2220w" sizes="100vw">
             <source media="(max-width: 960px)" srcset="./assets/images/img_visual_mobile.webp 1277w" sizes="100vw">
-            <img src="./assets/images/img_visual.webp" alt="샤넬 메인모델 제니화보">
+            <img src="./assets/images/img_visual.webp" alt="Chanel main model Jennie in photoshoot for Red Camellia products">
           </picture>
         </div>
         <div class="title_box">
-          <h1 class="title">THE BEAUTIFUL</h1>
+          <h1 class="title" aria-label="N°1 DE CHANEL - Red Camellia Skincare">THE BEAUTIFUL</h1>
           <strong class="sub_title">
             by CHANEL
           </strong>
